--- a/bin/addons/base/i18n/de.po
+++ b/bin/addons/base/i18n/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-20 22:57+0000\n"
-"Last-Translator: D. Hille <Unknown>\n"
+"PO-Revision-Date: 2011-11-29 06:59+0000\n"
+"Last-Translator: mniess <mniess@gmail.com>\n"
 "Language-Team: German <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-01 05:15+0000\n"
-"X-Generator: Launchpad (build 14197)\n"
+"X-Launchpad-Export-Date: 2011-11-30 05:47+0000\n"
+"X-Generator: Launchpad (build 14404)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -4469,7 +4469,7 @@ msgstr "Seriennummer"
 #. module: base
 #: selection:res.request,priority:0
 msgid "Low"
-msgstr "Ausreichend"
+msgstr "Niedrig"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_audit
@@ -8524,7 +8524,7 @@ msgstr "Aktionen"
 #. module: base
 #: selection:res.request,priority:0
 msgid "High"
-msgstr "Gut"
+msgstr "Hoch"
 
 #. module: base
 #: field:ir.exports.line,export_id:0
