--- a/bin/addons/base/i18n/de.po
+++ b/bin/addons/base/i18n/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-12-13 21:24+0000\n"
+"PO-Revision-Date: 2011-12-16 21:12+0000\n"
 "Last-Translator: Ferdinand @ Camptocamp <Unknown>\n"
 "Language-Team: German <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-12-14 05:29+0000\n"
-"X-Generator: Launchpad (build 14487)\n"
+"X-Launchpad-Export-Date: 2011-12-17 05:38+0000\n"
+"X-Generator: Launchpad (build 14525)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -6258,7 +6258,7 @@ msgstr "Erstellen"
 #. module: base
 #: view:ir.sequence:0
 msgid "Current Year with Century: %(year)s"
-msgstr "Aktuelles JAhr mit Jahrhundert: %(year)s"
+msgstr "Aktuelles Jahr mit Jahrhundert: %(year)s"
 
 #. module: base
 #: field:ir.exports,export_fields:0
