--- a/bin/addons/base/i18n/hu.po
+++ b/bin/addons/base/i18n/hu.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0dev\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-11-15 02:12+0000\n"
-"Last-Translator: Toolpart Team <Unknown>\n"
+"PO-Revision-Date: 2011-12-18 15:03+0000\n"
+"Last-Translator: Tamás Dénes <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-16 05:29+0000\n"
-"X-Generator: Launchpad (build 14291)\n"
+"X-Launchpad-Export-Date: 2011-12-19 04:58+0000\n"
+"X-Generator: Launchpad (build 14525)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -581,7 +581,7 @@ msgstr ""
 #. module: base
 #: field:res.partner,title:0
 msgid "Partner Form"
-msgstr "Partner űrlap"
+msgstr "Cégforma"
 
 #. module: base
 #: selection:base.language.install,lang:0
