--- a/bin/addons/base/i18n/ar.po
+++ b/bin/addons/base/i18n/ar.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2012-01-08 19:58+0000\n"
-"Last-Translator: kifcaliph <Unknown>\n"
+"PO-Revision-Date: 2012-01-09 13:51+0000\n"
+"Last-Translator: walid <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-01-09 05:12+0000\n"
+"X-Launchpad-Export-Date: 2012-01-10 05:47+0000\n"
 "X-Generator: Launchpad (build 14640)\n"
 
 #. module: base
@@ -1189,7 +1189,7 @@ msgstr "الولاية أو المنطقة في الدولة"
 #. module: base
 #: selection:ir.property,type:0
 msgid "Float"
-msgstr ""
+msgstr "عشري"
 
 #. module: base
 #: model:ir.model,name:base.model_res_request_link
@@ -3403,7 +3403,7 @@ msgstr "البيانات"
 #: field:ir.ui.menu,parent_id:0
 #: field:wizard.ir.model.menu.create,menu_id:0
 msgid "Parent Menu"
-msgstr "القائمة الأم"
+msgstr "القائمة الرئيسية"
 
 #. module: base
 #: field:ir.rule,perm_unlink:0
@@ -4641,7 +4641,7 @@ msgstr "منغوليا"
 #. module: base
 #: view:ir.module.module:0
 msgid "Created Menus"
-msgstr ""
+msgstr "أنشاء القوائم"
 
 #. module: base
 #: selection:ir.ui.view,type:0
