--- a/bin/addons/base/i18n/fr.po
+++ b/bin/addons/base/i18n/fr.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2012-01-06 15:37+0000\n"
+"PO-Revision-Date: 2012-01-10 12:02+0000\n"
 "Last-Translator: Numérigraphe <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-01-07 05:58+0000\n"
+"X-Launchpad-Export-Date: 2012-01-11 04:58+0000\n"
 "X-Generator: Launchpad (build 14640)\n"
 
 #. module: base
@@ -1005,7 +1005,7 @@ msgstr "Haïti"
 #: view:ir.ui.view:0
 #: selection:ir.ui.view,type:0
 msgid "Search"
-msgstr "Rechercher"
+msgstr "Recherche"
 
 #. module: base
 #: code:addons/osv.py:132
@@ -1366,7 +1366,7 @@ msgstr "Partenaires"
 #. module: base
 #: field:res.partner.category,parent_left:0
 msgid "Left parent"
-msgstr "Parenté de gauche"
+msgstr "Parent de gauche"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.res_widget_act_window
