--- a/bin/addons/base/i18n/ar.po
+++ b/bin/addons/base/i18n/ar.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2012-01-09 13:51+0000\n"
-"Last-Translator: walid <Unknown>\n"
+"PO-Revision-Date: 2012-01-20 20:03+0000\n"
+"Last-Translator: Mohamed M. Hagag <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-01-10 05:47+0000\n"
-"X-Generator: Launchpad (build 14640)\n"
+"X-Launchpad-Export-Date: 2012-01-21 06:18+0000\n"
+"X-Generator: Launchpad (build 14700)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -23,7 +23,7 @@ msgstr ""
 #: field:ir.rule,domain_force:0
 #: field:res.partner.title,domain:0
 msgid "Domain"
-msgstr "النطاق"
+msgstr "نطاق"
 
 #. module: base
 #: model:res.country,name:base.sh
@@ -60,12 +60,12 @@ msgstr "بيانات وصفية"
 #: field:ir.ui.view,arch:0
 #: field:ir.ui.view.custom,arch:0
 msgid "View Architecture"
-msgstr "العرض الهندسي"
+msgstr "عرض المنصة (الهيكلة)"
 
 #. module: base
 #: field:base.language.import,code:0
 msgid "Code (eg:en__US)"
-msgstr "الرمز (مثال: ar_EG)"
+msgstr "الترميز (مثل: ar_EG)"
 
 #. module: base
 #: view:workflow:0
@@ -4389,6 +4389,10 @@ msgstr "صلاحيات الإنشاء"
 
 #. module: base
 #: field:res.partner.address,state_id:0
+#: field:res.bank,state:0
+#: field:res.company,state_id:0
+#: view:res.country.state:0
+#: field:res.partner.bank,state_id:0
 msgid "Fed. State"
 msgstr "المحافظة / الولاية"
 
@@ -7349,10 +7353,6 @@ msgstr "نوع التقرير"
 #: field:ir.module.module,state:0
 #: field:ir.module.module.dependency,state:0
 #: field:publisher_warranty.contract,state:0
-#: field:res.bank,state:0
-#: field:res.company,state_id:0
-#: view:res.country.state:0
-#: field:res.partner.bank,state_id:0
 #: view:res.request:0
 #: field:res.request,state:0
 #: field:workflow.instance,state:0
