--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: 5.0.1-0-2\n"
 "Report-Msgid-Bugs-To: openerp-server@packages.debian.org\n"
 "POT-Creation-Date: 2009-08-24 22:41+0300\n"
-"PO-Revision-Date: 2011-01-19 13:31+0000\n"
-"Last-Translator: Quentin THEURET <quentin@theuret.net>\n"
+"PO-Revision-Date: 2012-01-20 10:18+0000\n"
+"Last-Translator: Numérigraphe <Unknown>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-01 05:21+0000\n"
-"X-Generator: Launchpad (build 14197)\n"
+"X-Launchpad-Export-Date: 2012-01-21 06:18+0000\n"
+"X-Generator: Launchpad (build 14700)\n"
 
 #. Type: string
 #. Description
@@ -31,7 +31,7 @@ msgid ""
 "privileges."
 msgstr ""
 "Afin de ne pas compromettre la sécurité du système, les opérations du "
-"serveur Open ERP doivent être exécutée avec un compte dédié et différent du "
+"serveur Open ERP doivent être exécutées avec un compte dédié et différent du "
 "superutilisateur."
 
 #. Type: string
