--- a/bin/addons/base/i18n/ro.po
+++ b/bin/addons/base/i18n/ro.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-12-29 08:09+0000\n"
-"Last-Translator: Fekete Mihai <mihai.fekete@etotalpc.ro>\n"
+"PO-Revision-Date: 2012-01-27 11:23+0000\n"
+"Last-Translator: Dorin <dhongu@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-12-30 05:55+0000\n"
-"X-Generator: Launchpad (build 14560)\n"
+"X-Launchpad-Export-Date: 2012-01-28 05:14+0000\n"
+"X-Generator: Launchpad (build 14727)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -33,7 +33,7 @@ msgstr "Sfânta Elena"
 #. module: base
 #: view:ir.actions.report.xml:0
 msgid "Other Configuration"
-msgstr "Altă configuraţie"
+msgstr "Altă configurație"
 
 #. module: base
 #: selection:ir.property,type:0
@@ -48,7 +48,7 @@ msgid ""
 "%s, which is not a valid SQL table name."
 msgstr ""
 "Al doilea parametru a câmpului many2many %s trebuie să fie un tabel SQL ! "
-"Ati folosit %s, care nu este un tabel SQL valid."
+"Ați folosit %s, care nu este un tabel SQL valid."
 
 #. module: base
 #: view:ir.values:0
@@ -60,7 +60,7 @@ msgstr "Metadate"
 #: field:ir.ui.view,arch:0
 #: field:ir.ui.view.custom,arch:0
 msgid "View Architecture"
-msgstr "Alcatuirea afisării"
+msgstr "Alcatuirea afișării"
 
 #. module: base
 #: field:base.language.import,code:0
@@ -105,12 +105,12 @@ msgstr "Activare Flux de lucru"
 #. module: base
 #: field:ir.actions.act_window,display_menu_tip:0
 msgid "Display Menu Tips"
-msgstr "Afisare sfaturi meniu"
+msgstr "Afișare sfaturi meniu"
 
 #. module: base
 #: view:ir.module.module:0
 msgid "Created Views"
-msgstr "Afisari Create"
+msgstr "Afișări Create"
 
 #. module: base
 #: code:addons/base/ir/ir_model.py:519
@@ -119,8 +119,8 @@ msgid ""
 "You can not write in this document (%s) ! Be sure your user belongs to one "
 "of these groups: %s."
 msgstr ""
-"Nu puteti scrie în acest document (%s) ! Asigurati-vă că utilizatorul "
-"apartine unuia dintre aceste grupuri: %s."
+"Nu puteți scrie în acest document (%s) ! Asigurați-vă că utilizatorul "
+"aparține unuia dintre aceste grupuri: %s."
 
 #. module: base
 #: help:ir.model.fields,domain:0
@@ -129,19 +129,19 @@ msgid ""
 "specified as a Python expression defining a list of triplets. For example: "
 "[('color','=','red')]"
 msgstr ""
-"Domeniul optional pentru a restrictiona posibilele valori pentru câmpurile "
+"Domeniul opțional pentru a restricționa posibilele valori pentru câmpurile "
 "asociate,  specificat ca o expresie Python definind o lista cu trei "
 "elemente. De exemplu: [('culoare','=','rosu')]"
 
 #. module: base
 #: field:res.partner,ref:0
 msgid "Reference"
-msgstr "Referinţă"
+msgstr "Referință"
 
 #. module: base
 #: field:ir.actions.act_window,target:0
 msgid "Target Window"
-msgstr "Fereastra tinta"
+msgstr "Fereastră ţintă"
 
 #. module: base
 #: code:addons/base/res/res_users.py:541
@@ -156,8 +156,8 @@ msgid ""
 "Properties of base fields cannot be altered in this manner! Please modify "
 "them through Python code, preferably through a custom addon!"
 msgstr ""
-"Proprietatile campurilor principale nu pot fi modificate in acest mod! Va "
-"rugam sa le modificati prin codul Python, preferabil printr-un addon "
+"Proprietatile câmpurilor principale nu pot fi modificate în acest mod! Vă "
+"rugam sa le modificați prin codul Python, preferabil printr-un addon "
 "personalizat!"
 
 #. module: base
@@ -174,7 +174,7 @@ msgstr "ir.ui.view.custom"
 #. module: base
 #: model:res.country,name:base.sz
 msgid "Swaziland"
-msgstr "Swaziland"
+msgstr "Elveţia"
 
 #. module: base
 #: code:addons/orm.py:4171
@@ -194,14 +194,14 @@ msgid ""
 "Some installed modules depend on the module you plan to Uninstall :\n"
 " %s"
 msgstr ""
-"Unele module instalate depind de modulul pe care intenţionaţi să îl "
-"dezinstalaţi :\n"
+"Unele module instalate depind de modulul pe care intenționați să îl "
+"dezinstalați :\n"
 " %s"
 
 #. module: base
 #: field:ir.sequence,number_increment:0
 msgid "Increment Number"
-msgstr "Numar Crestere"
+msgstr "Numar Creștere"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_res_company_tree
@@ -217,7 +217,7 @@ msgstr "Inuktitut / ᐃᓄᒃᑎᑐᑦ"
 #. module: base
 #: view:res.partner:0
 msgid "Search Partner"
-msgstr "Cautare Partener"
+msgstr "Căutare Partener"
 
 #. module: base
 #: code:addons/base/res/res_user.py:132
@@ -236,17 +236,17 @@ msgstr "nou"
 #. module: base
 #: field:ir.actions.report.xml,multi:0
 msgid "On multiple doc."
-msgstr "In documente multiple"
+msgstr "În documente multiple"
 
 #. module: base
 #: field:ir.module.category,module_nr:0
 msgid "Number of Modules"
-msgstr "Numar de Module"
+msgstr "Număr de module"
 
 #. module: base
 #: help:multi_company.default,company_dest_id:0
 msgid "Company to store the current record"
-msgstr "Compania unde se pastreaza inregistrarea prezenta"
+msgstr "Compania unde se păstrează înregistrarea prezentă"
 
 #. module: base
 #: field:res.partner.bank.type.field,size:0
@@ -267,8 +267,8 @@ msgid ""
 "Save this document to a %s file and edit it with a specific software or a "
 "text editor. The file encoding is UTF-8."
 msgstr ""
-"Salvati acest document intr-un fisier %s si editati-l cu un soft specific "
-"sau cuun editor de text. Codarea fisierului esteUTF-8."
+"Salvați acest document într-un fișier %s și editați-l cu un soft specific "
+"sau cuun editor de text. Codarea fișierului este UTF-8."
 
 #. module: base
 #: sql_constraint:res.lang:0
@@ -4524,6 +4524,10 @@ msgstr "Acces creare"
 
 #. module: base
 #: field:res.partner.address,state_id:0
+#: field:res.bank,state:0
+#: field:res.company,state_id:0
+#: view:res.country.state:0
+#: field:res.partner.bank,state_id:0
 msgid "Fed. State"
 msgstr "Stat federal"
 
@@ -7572,10 +7576,6 @@ msgstr "Tip de raport"
 #: field:ir.module.module,state:0
 #: field:ir.module.module.dependency,state:0
 #: field:publisher_warranty.contract,state:0
-#: field:res.bank,state:0
-#: field:res.company,state_id:0
-#: view:res.country.state:0
-#: field:res.partner.bank,state_id:0
 #: view:res.request:0
 #: field:res.request,state:0
 #: field:workflow.instance,state:0
