--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-08-24 22:41+0300\n"
-"PO-Revision-Date: 2011-01-19 13:31+0000\n"
-"Last-Translator: OpenERP Administrators <Unknown>\n"
+"PO-Revision-Date: 2012-01-27 11:16+0000\n"
+"Last-Translator: Dorin <dhongu@gmail.com>\n"
 "Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-01 05:21+0000\n"
-"X-Generator: Launchpad (build 14197)\n"
+"X-Launchpad-Export-Date: 2012-01-28 05:14+0000\n"
+"X-Generator: Launchpad (build 14727)\n"
 
 #. Type: string
 #. Description
@@ -31,11 +31,11 @@ msgid ""
 "the system's security is not compromised by running it with superuser "
 "privileges."
 msgstr ""
-"Serverul Open ERP trebuie sa utilizeze un cont dedicat, deoarece din motive "
+"Serverul Open ERP trebuie să utilizeze un cont dedicat, deoarece din motive "
 "de securitate este contraindicat să ruleze cu privilegii de superuser."
 
 #. Type: string
 #. Description
 #: ../openerp-server.templates:1001
 msgid "Please choose that account's username."
-msgstr "Alegeţi numele utilizatorului (username)"
+msgstr "Alegeți numele utilizatorului (username)"
