--- a/bin/addons/base/i18n/ro.po
+++ b/bin/addons/base/i18n/ro.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2012-01-27 11:23+0000\n"
+"PO-Revision-Date: 2012-02-03 16:19+0000\n"
 "Last-Translator: Dorin <dhongu@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-01-28 05:14+0000\n"
-"X-Generator: Launchpad (build 14727)\n"
+"X-Launchpad-Export-Date: 2012-02-04 06:04+0000\n"
+"X-Generator: Launchpad (build 14738)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -619,7 +619,7 @@ msgstr "Regatul Cambodia"
 #: view:ir.sequence:0
 #: model:ir.ui.menu,name:base.menu_ir_sequence_form
 msgid "Sequences"
-msgstr "Secvenţe"
+msgstr "Secvențe"
 
 #. module: base
 #: model:ir.model,name:base.model_base_language_import
@@ -1182,7 +1182,7 @@ msgid ""
 "If set to true, the action will not be displayed on the right toolbar of a "
 "form view."
 msgstr ""
-"Dacă este setat pe adevărat, actiunea nu va fi afisată pe bara din dreapta a "
+"Dacă este setat pe adevărat, acțiunea nu va fi afișată pe bara din dreapta a "
 "unei ferestre."
 
 #. module: base
@@ -1311,7 +1311,7 @@ msgstr "ID-ul atasat"
 #. module: base
 #: view:ir.sequence:0
 msgid "Day: %(day)s"
-msgstr "Ziua: %(zi)le"
+msgstr "Ziua: %(day)s"
 
 #. module: base
 #: model:res.country,name:base.mv
@@ -1628,9 +1628,9 @@ msgid ""
 "Views allows you to personalize each view of OpenERP. You can add new "
 "fields, move fields, rename them or delete the ones that you do not need."
 msgstr ""
-"Vizualizarile va permit sa personalizati fiecare vizualizare OpenERP. Puteti "
-"adăuga cămpuri noi, le puteti muta sau redenumi sau le puteti sterge pe cele "
-"de care nu aveti nevoie."
+"Vizualizările vă permit să personalizați fiecare vizualizare OpenERP. Puteți "
+"adăuga câmpuri noi, le puteți muta, redenumi sau le puteți șterge pe cele de "
+"care nu aveți nevoie."
 
 #. module: base
 #: field:ir.actions.act_window,groups_id:0
@@ -3014,7 +3014,7 @@ msgstr "Spaniolă (HN) / Español (HN)"
 #. module: base
 #: view:ir.sequence.type:0
 msgid "Sequence Type"
-msgstr "Tipul secvenţei"
+msgstr "Tipul secvenței"
 
 #. module: base
 #: view:ir.ui.view.custom:0
@@ -3055,9 +3055,9 @@ msgid ""
 "The selected language has been successfully installed. You must change the "
 "preferences of the user and open a new menu to view the changes."
 msgstr ""
-"Limba selectata a fost instalata cu succes. Trebuie sa schimbati "
-"preferintele utilizatorului si sa deschideti un meniu nou pentru a vedea "
-"modificarile."
+"Limba selectată a fost instalată cu succes. Trebuie să schimbați "
+"preferințele utilizatorului și să deschideți un meniu nou pentru a vedea "
+"modificările."
 
 #. module: base
 #: sql_constraint:ir.config_parameter:0
@@ -3308,7 +3308,7 @@ msgstr "Acel contract este deja inregistrat in sistem."
 #. module: base
 #: help:ir.sequence,suffix:0
 msgid "Suffix value of the record for the sequence"
-msgstr "Valoarea sufixului inregistrarii pentru secventa"
+msgstr "Valoarea sufixului înregistrării pentru secvență"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -3529,12 +3529,12 @@ msgid ""
 "to see. Whether they can have a read, write, create and delete access right "
 "can be managed from here."
 msgstr ""
-"Un grup este un set de zone functionale care vor fi atribuite utilizatorilor "
-"pentru a le permite accesul si drepturi la aplicatii si sarcini specifice "
-"din sistem. Puteti crea grupuri personalizate sau sa le editati pe cele "
+"Un grup este un set de zone funcționale care vor fi atribuite utilizatorilor "
+"pentru a le permite accesul și drepturi la aplicații și sarcini specifice "
+"din sistem. Puteți crea grupuri personalizate sau să le editați pe cele "
 "existente prin default pentru a personaliza vizualizarea meniului pe care il "
-"vor putea vedea utilizatorii. Indiferent daca au drepturi de acces pentru a "
-"citi, scrie, crea sau sterge, acestea pot fi gestionate de aici."
+"vor putea vedea utilizatorii. Indiferent dacă au drepturi de acces pentru a "
+"citi, scrie, crea sau șterge, acestea pot fi gestionate de aici."
 
 #. module: base
 #: view:res.partner:0
@@ -3723,7 +3723,7 @@ msgid ""
 "If set to true, the action will not be displayed on the right toolbar of a "
 "form view"
 msgstr ""
-"Daca este setat pe adevarat, actiunea nu va fi afisata in bara de "
+"Dacă este setat pe adevarat, acțiunea nu va fi afișată în bara de "
 "instrumente din dreapta a unui formular vizualizare"
 
 #. module: base
@@ -4441,7 +4441,7 @@ msgstr "Indoneziană / Bahasa Indonesia"
 #. module: base
 #: field:ir.ui.view,inherit_id:0
 msgid "Inherited View"
-msgstr "Vizualizare mostenită"
+msgstr "Vizualizare moștenită"
 
 #. module: base
 #: view:ir.translation:0
@@ -4735,7 +4735,7 @@ msgstr ""
 #: code:addons/orm.py:1850
 #, python-format
 msgid "Insufficient fields for Calendar View!"
-msgstr "Campuri insuficiente pentru Vizualizarea Calendar!"
+msgstr "Câmpuri insuficiente pentru Vizualizarea Calendar!"
 
 #. module: base
 #: selection:ir.property,type:0
@@ -4823,7 +4823,7 @@ msgstr "Bhutan"
 #. module: base
 #: help:ir.sequence,number_next:0
 msgid "Next number of this sequence"
-msgstr "Urmatorul numar al aceste secvente"
+msgstr "Următorul număr al acestei secvențe"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_11
@@ -5439,7 +5439,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_action_ui_view_custom
 #: view:ir.ui.view.custom:0
 msgid "Customized Views"
-msgstr "Vizualizari Personalizate"
+msgstr "Vizualizări Personalizate"
 
 #. module: base
 #: view:partner.sms.send:0
@@ -6249,7 +6249,7 @@ msgstr "Strângerea de fonduri"
 #: model:ir.actions.act_window,name:base.ir_sequence_type
 #: model:ir.ui.menu,name:base.menu_ir_sequence_type
 msgid "Sequence Codes"
-msgstr "Coduri Secventa"
+msgstr "Coduri secvență"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -6273,7 +6273,7 @@ msgstr "Creează"
 #. module: base
 #: view:ir.sequence:0
 msgid "Current Year with Century: %(year)s"
-msgstr "An Curent cu Secol: %(an) (ani)"
+msgstr "An curent cu secol: %(year)s"
 
 #. module: base
 #: field:ir.exports,export_fields:0
@@ -6767,7 +6767,7 @@ msgstr "Martinica (Franceză)"
 #. module: base
 #: view:ir.sequence.type:0
 msgid "Sequences Type"
-msgstr "Tip Secventa"
+msgstr "Tip secvență"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.res_request-act
@@ -7315,7 +7315,7 @@ msgstr "Data trimiterii"
 #. module: base
 #: view:ir.sequence:0
 msgid "Month: %(month)s"
-msgstr "Luna: %(luna(i)"
+msgstr "Luna: %(month)s"
 
 #. module: base
 #: field:ir.actions.act_window.view,sequence:0
@@ -7335,7 +7335,7 @@ msgstr "Luna: %(luna(i)"
 #: field:res.widget.user,sequence:0
 #: field:wizard.ir.model.menu.create.line,sequence:0
 msgid "Sequence"
-msgstr "Secvenţa"
+msgstr "Secvență"
 
 #. module: base
 #: model:res.country,name:base.tn
@@ -9262,7 +9262,7 @@ msgstr "Ruanda"
 #. module: base
 #: view:ir.sequence:0
 msgid "Day of the week (0:Monday): %(weekday)s"
-msgstr "Ziua din săptămână (0:Luni): %(zi (zile) lucratoare)"
+msgstr "Ziua din săptămână (0:luni): %(weekday)s"
 
 #. module: base
 #: model:res.country,name:base.ck
@@ -9527,7 +9527,7 @@ msgstr "Camp Wizard"
 #. module: base
 #: help:ir.sequence,prefix:0
 msgid "Prefix value of the record for the sequence"
-msgstr "Valoarea prefixului inregistrarii pentru secventa"
+msgstr "Valoarea prefixului înregistrării pentru secvență"
 
 #. module: base
 #: model:res.country,name:base.sc
@@ -9584,7 +9584,7 @@ msgstr "Obiect Resursa"
 #. module: base
 #: help:ir.sequence,number_increment:0
 msgid "The next number of the sequence will be incremented by this number"
-msgstr "Urmatorul numar al secventei va fi adaugat de catre acest numar"
+msgstr "Următorul număr al secvenței va fi adăugat de către acest număr"
 
 #. module: base
 #: field:res.partner.address,function:0
