--- a/bin/addons/base/i18n/gu.po
+++ b/bin/addons/base/i18n/gu.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2012-02-16 13:07+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-02-17 13:38+0000\n"
+"Last-Translator: Anup(SerpentCS) <anup.chavda@serpentcs.com>\n"
 "Language-Team: Gujarati <gu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-02-17 05:18+0000\n"
+"X-Launchpad-Export-Date: 2012-02-18 05:27+0000\n"
 "X-Generator: Launchpad (build 14814)\n"
 
 #. module: base
@@ -24,7 +24,7 @@ msgstr ""
 #: field:ir.rule,domain_force:0
 #: field:res.partner.title,domain:0
 msgid "Domain"
-msgstr ""
+msgstr "શરતી અવકાશ"
 
 #. module: base
 #: model:res.country,name:base.sh
@@ -55,7 +55,7 @@ msgstr ""
 #: view:ir.values:0
 #: field:ir.values,meta_unpickle:0
 msgid "Metadata"
-msgstr ""
+msgstr "મેટાડેટા"
 
 #. module: base
 #: field:ir.ui.view,arch:0
@@ -81,7 +81,7 @@ msgstr "કાર્યપધ્ધ્તી"
 #. module: base
 #: view:partner.sms.send:0
 msgid "SMS - Gateway: clickatell"
-msgstr ""
+msgstr "સુક્ષ્મ સંદેશ સેવા ગેટવે: clickatell"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -91,17 +91,17 @@ msgstr "હંગેરીયન / Magyar"
 #. module: base
 #: selection:ir.model.fields,select_level:0
 msgid "Not Searchable"
-msgstr ""
+msgstr "શોધ કરી ન શકાય તેવુ"
 
 #. module: base
 #: selection:base.language.install,lang:0
 msgid "Spanish (VE) / Español (VE)"
-msgstr ""
+msgstr "સ્પેનિશ (VE) / Español (VE)"
 
 #. module: base
 #: field:ir.actions.server,wkf_model_id:0
 msgid "Workflow On"
-msgstr ""
+msgstr "કાર્યપધ્ધ્તી ચાલુ"
 
 #. module: base
 #: field:ir.actions.act_window,display_menu_tip:0
@@ -120,6 +120,8 @@ msgid ""
 "You can not write in this document (%s) ! Be sure your user belongs to one "
 "of these groups: %s."
 msgstr ""
+"તમે આ દસ્તાવેજ (%s)  મા લખી નહી શકો!  ખાતરી કરી લો કે તમારો વાપરનાર(યુઝર) %s "
+"સમુદાયો માથી એક સમુદાય નો સભ્ય  છે"
 
 #. module: base
 #: help:ir.model.fields,domain:0
@@ -128,22 +130,25 @@ msgid ""
 "specified as a Python expression defining a list of triplets. For example: "
 "[('color','=','red')]"
 msgstr ""
+"ગૌણ શરતી ક્ષેત્ર સંબંધિત ફિલ્ડ ની સંભવિત વેલ્યુ ને પ્રતિબંધિત કરવા માટે "
+"વપરાય છે, કે જે પાયથન એક્સપ્રેશન ટ્રિપ્લેટ ના લિસ્ટ થી ઉલ્લેખાય છે. ઉદાહરણ "
+"તરીકે:[('color','=','red')]"
 
 #. module: base
 #: field:res.partner,ref:0
 msgid "Reference"
-msgstr ""
+msgstr "સંદર્ભ"
 
 #. module: base
 #: field:ir.actions.act_window,target:0
 msgid "Target Window"
-msgstr ""
+msgstr "લક્ષ્યાંક વિન્ડો"
 
 #. module: base
 #: code:addons/base/res/res_users.py:558
 #, python-format
 msgid "Warning!"
-msgstr ""
+msgstr "ચેતવણી!"
 
 #. module: base
 #: code:addons/base/ir/ir_model.py:344
@@ -152,33 +157,35 @@ msgid ""
 "Properties of base fields cannot be altered in this manner! Please modify "
 "them through Python code, preferably through a custom addon!"
 msgstr ""
+"બેયઝ ફિલ્ડ ના ગુણધર્મો મા આ પ્રકારે ફેરફાર થઈ શકશે નહી! મહેરબાની કરી ને "
+"પાયથન કોડ થી ફેરફાર કરો, શક્ય હોય તો એક કસ્ટમ એડ-ઓન થી."
 
 #. module: base
 #: code:addons/osv.py:129
 #, python-format
 msgid "Constraint Error"
-msgstr ""
+msgstr "મર્યાદા(કન્સ્ટ્રૈન્ટ) ભૂલ"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_view_custom
 msgid "ir.ui.view.custom"
-msgstr ""
+msgstr "ir.ui.view.custom"
 
 #. module: base
 #: model:res.country,name:base.sz
 msgid "Swaziland"
-msgstr ""
+msgstr "સ્વાઝિલેન્ડ"
 
 #. module: base
 #: code:addons/orm.py:4206
 #, python-format
 msgid "created."
-msgstr ""
+msgstr "સર્જન કર્યુ."
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_woodsuppliers0
 msgid "Wood Suppliers"
-msgstr ""
+msgstr "વુડ સપ્લાયર્સ"
 
 #. module: base
 #: code:addons/base/module/module.py:390
@@ -187,66 +194,69 @@ msgid ""
 "Some installed modules depend on the module you plan to Uninstall :\n"
 " %s"
 msgstr ""
+"તમે જે મોડ્યુલ ને અસ્થાપિત કરવા માંગો છો તે મોડ્યુલ બીજા સ્થાપિત મોડ્યુલોને "
+"આધિન છે:\n"
+" %s"
 
 #. module: base
 #: field:ir.sequence,number_increment:0
 msgid "Increment Number"
-msgstr ""
+msgstr "આવૃત્તક ક્રમાંક"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_res_company_tree
 #: model:ir.ui.menu,name:base.menu_action_res_company_tree
 msgid "Company's Structure"
-msgstr ""
+msgstr "પેઢી(કંપની) નુ બંધારણ"
 
 #. module: base
 #: selection:base.language.install,lang:0
 msgid "Inuktitut / ᐃᓄᒃᑎᑐᑦ"
-msgstr ""
+msgstr "ઇનુક્રિટૂત / ᐃᓄᒃᑎᑐᑦ"
 
 #. module: base
 #: view:res.partner:0
 msgid "Search Partner"
-msgstr ""
+msgstr "ભાગીદાર શોધ"
 
 #. module: base
 #: code:addons/base/res/res_user.py:132
 #, python-format
 msgid "\"smtp_server\" needs to be set to send mails to users"
-msgstr ""
+msgstr "વાપરનારો(યુઝર્સ) ને ઈ-મૈલ મોકલવા માટે 'એસએમટીપી_સર્વર' સેટ કરવુ પડશે"
 
 #. module: base
 #: code:addons/base/module/wizard/base_export_language.py:60
 #, python-format
 msgid "new"
-msgstr ""
+msgstr "નવું"
 
 #. module: base
 #: field:ir.actions.report.xml,multi:0
 msgid "On multiple doc."
-msgstr ""
+msgstr "અનેક દસ્તાવેજો પર."
 
 #. module: base
 #: field:ir.module.category,module_nr:0
 msgid "Number of Modules"
-msgstr ""
+msgstr "મોડ્યુલો ની સંખ્યા"
 
 #. module: base
 #: help:multi_company.default,company_dest_id:0
 msgid "Company to store the current record"
-msgstr ""
+msgstr "વર્તમાન રેકોર્ડ નો સંગ્રહ કરતી કંપની"
 
 #. module: base
 #: field:res.partner.bank.type.field,size:0
 msgid "Max. Size"
-msgstr ""
+msgstr "મહત્તમ પરિમાણ"
 
 #. module: base
 #: view:res.partner:0
 #: field:res.partner,subname:0
 #: field:res.partner.address,name:0
 msgid "Contact Name"
-msgstr ""
+msgstr "સંપર્ક નામ"
 
 #. module: base
 #: code:addons/base/module/wizard/base_export_language.py:56
@@ -255,108 +265,110 @@ msgid ""
 "Save this document to a %s file and edit it with a specific software or a "
 "text editor. The file encoding is UTF-8."
 msgstr ""
+"આ દસ્તાવેજ નો %s ફાઇલ મા સંગ્રહ કરો અને ચોક્કસ સોફ્ટવેર કે લખાણ "
+"સંપાદક(ટેક્સ્ટ એડિટર) વડે સંપાદન કરો. ફાઇલ નુ એન્કોડિંન્ગ UTF-8 છે."
 
 #. module: base
 #: sql_constraint:res.lang:0
 msgid "The name of the language must be unique !"
-msgstr ""
+msgstr "ભાષા નુ નામ અનુપ(અનન્ય) હોવુ જોઇયે !"
 
 #. module: base
 #: selection:res.request,state:0
 msgid "active"
-msgstr ""
+msgstr "સક્રિય"
 
 #. module: base
 #: field:ir.actions.wizard,wiz_name:0
 msgid "Wizard Name"
-msgstr ""
+msgstr "વિઝાર્ડ નુ નામ"
 
 #. module: base
 #: code:addons/orm.py:2526
 #, python-format
 msgid "Invalid group_by"
-msgstr ""
+msgstr "અમાન્ય group_by"
 
 #. module: base
 #: field:res.partner,credit_limit:0
 msgid "Credit Limit"
-msgstr ""
+msgstr "ઋણ સીમા"
 
 #. module: base
 #: field:ir.model.data,date_update:0
 msgid "Update Date"
-msgstr ""
+msgstr "અદ્યતન(અપડેટ) તારીખ"
 
 #. module: base
 #: view:ir.attachment:0
 msgid "Owner"
-msgstr ""
+msgstr "માલિક"
 
 #. module: base
 #: field:ir.actions.act_window,src_model:0
 msgid "Source Object"
-msgstr ""
+msgstr "સ્ત્રોત ઓબ્જેક્ટ"
 
 #. module: base
 #: view:ir.actions.todo:0
 msgid "Config Wizard Steps"
-msgstr ""
+msgstr "વિઝાર્ડ  ની રૂપરેખા(કન્ફિગ્યુરેશન) ના પગલા"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_view_sc
 msgid "ir.ui.view_sc"
-msgstr ""
+msgstr "ir.ui.view_sc"
 
 #. module: base
 #: field:res.widget.user,widget_id:0
 #: field:res.widget.wizard,widgets_list:0
 msgid "Widget"
-msgstr ""
+msgstr "વિજેટ"
 
 #. module: base
 #: view:ir.model.access:0
 #: field:ir.model.access,group_id:0
 msgid "Group"
-msgstr ""
+msgstr "સમુદાય"
 
 #. module: base
 #: field:ir.exports.line,name:0
 #: field:ir.translation,name:0
 #: field:res.partner.bank.type.field,name:0
 msgid "Field Name"
-msgstr ""
+msgstr "ફિલ્ડ નુ નામ"
 
 #. module: base
 #: wizard_view:server.action.create,init:0
 #: wizard_field:server.action.create,init,type:0
 msgid "Select Action Type"
-msgstr ""
+msgstr "કૃત્ય(એકશન) નો પ્રકાર પસંદ કરો"
 
 #. module: base
 #: model:res.country,name:base.tv
 msgid "Tuvalu"
-msgstr ""
+msgstr "ટુવાલુ"
 
 #. module: base
 #: selection:ir.model,state:0
 msgid "Custom Object"
-msgstr ""
+msgstr "કસ્ટમ ઓબ્જેક્ટ"
 
 #. module: base
 #: field:res.lang,date_format:0
 msgid "Date Format"
-msgstr ""
+msgstr "તારીખ સ્વરૂપણ"
 
 #. module: base
 #: field:res.bank,email:0
 #: field:res.partner.address,email:0
 msgid "E-Mail"
-msgstr ""
+msgstr "ઈ-મેઇલ"
 
 #. module: base
 #: model:res.country,name:base.an
 msgid "Netherlands Antilles"
-msgstr ""
+msgstr "નેધરલેન્ડઝ એન્ટિલિસ"
 
 #. module: base
 #: code:addons/base/res/res_users.py:396
@@ -365,21 +377,23 @@ msgid ""
 "You can not remove the admin user as it is used internally for resources "
 "created by OpenERP (updates, module installation, ...)"
 msgstr ""
+"તમે સંચાલક(એડમિન) યુઝર ને હટાવી નહી શકો કારણ કે તે દ્વારા બનાવાયેલા સ્ત્રોતો "
+"માટે આન્તરિક રીતે વપરાય છે.(ફેરફારો, મોડ્યુલ સ્થાપન, ...)"
 
 #. module: base
 #: model:res.country,name:base.gf
 msgid "French Guyana"
-msgstr ""
+msgstr "ફ્રેન્ચ ગુયાના"
 
 #. module: base
 #: selection:base.language.install,lang:0
 msgid "Greek / Ελληνικά"
-msgstr ""
+msgstr "ગ્રીક / Ελληνικά"
 
 #. module: base
 #: selection:base.language.install,lang:0
 msgid "Bosnian / bosanski jezik"
-msgstr ""
+msgstr "બોસ્નિયન / bosanski jezik"
 
 #. module: base
 #: help:ir.actions.report.xml,attachment_use:0
@@ -387,49 +401,51 @@ msgid ""
 "If you check this, then the second time the user prints with same attachment "
 "name, it returns the previous report."
 msgstr ""
+"જો તમે જુઓ તો, જ્યારે બીજી વખત વાપરનાર(યુઝર) સરખા જોડાણ(અટેચમેન્ટ) નામ સાથે "
+"અહેવાલ(રિપોર્ટ) છાપે છે ત્યારે, જુનો અહેવાલ(રિપોર્ટ) જ છપાય છે ."
 
 #. module: base
 #: code:addons/orm.py:904
 #, python-format
 msgid "The read method is not implemented on this object !"
-msgstr ""
+msgstr "રીડ મેથડ આ ઓબ્જેક્ટ માટે પ્રસ્થાપિત કરેલ નથી!"
 
 #. module: base
 #: help:res.lang,iso_code:0
 msgid "This ISO code is the name of po files to use for translations"
-msgstr ""
+msgstr "આ ISO સંકેત ભાષાંતર માટે વપરાતી ફાઇલ નુ નામ છે."
 
 #. module: base
 #: view:base.module.upgrade:0
 msgid "Your system will be updated."
-msgstr ""
+msgstr "તમારી વ્યવસ્થા(સિસ્ટમ) અદ્યતન(અપડેટ) થઈ જશે."
 
 #. module: base
 #: field:ir.actions.todo,note:0
 #: selection:ir.property,type:0
 msgid "Text"
-msgstr ""
+msgstr "લેખન"
 
 #. module: base
 #: field:res.country,name:0
 msgid "Country Name"
-msgstr ""
+msgstr "દેશ નુ નામ"
 
 #. module: base
 #: model:res.country,name:base.co
 msgid "Colombia"
-msgstr ""
+msgstr "કોલંબિયા"
 
 #. module: base
 #: view:ir.module.module:0
 msgid "Schedule Upgrade"
-msgstr ""
+msgstr "નિર્ધારિત નવીનીકરણ"
 
 #. module: base
 #: code:addons/orm.py:1390
 #, python-format
 msgid "Key/value '%s' not found in selection field '%s'"
-msgstr ""
+msgstr "આ કી/વેલ્યુ '%s' સિલેકશન ફિલ્ડ '%s' મા મળેલ નથી."
 
 #. module: base
 #: help:res.country,code:0
@@ -437,45 +453,49 @@ msgid ""
 "The ISO country code in two chars.\n"
 "You can use this field for quick search."
 msgstr ""
+"દેશ ના આઇએસઓ(ISO) સંકેત બે અક્ષર મા.\n"
+"આ ફિલ્ડ નો ઉપયોગ તમે ઝડપી શોધ માતે કરિ શકો."
 
 #. module: base
 #: model:res.country,name:base.pw
 msgid "Palau"
-msgstr ""
+msgstr "પલાઉ"
 
 #. module: base
 #: view:res.partner:0
 msgid "Sales & Purchases"
-msgstr ""
+msgstr "વેંચાણ અને ખરીદી"
 
 #. module: base
 #: view:ir.translation:0
 msgid "Untranslated"
-msgstr ""
+msgstr "નિર-અનુવાદિત"
 
 #. module: base
 #: help:ir.actions.act_window,context:0
 msgid ""
 "Context dictionary as Python expression, empty by default (Default: {})"
 msgstr ""
+"કંટેક્સ્ટ પાયથન એક્સ્પ્રેશન મા એક ડિક્ષ્નરી છે કે જે મૂળભૂત રીતે ખાલી હોય છે "
+"(Default:{})"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.ir_action_wizard
 #: view:ir.actions.wizard:0
 #: model:ir.ui.menu,name:base.menu_ir_action_wizard
 msgid "Wizards"
-msgstr ""
+msgstr "વિઝાર્ડો"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_miscellaneoussuppliers0
 msgid "Miscellaneous Suppliers"
-msgstr ""
+msgstr "વિવિધ(પરચૂરણ) સપ્લાયરો"
 
 #. module: base
 #: code:addons/base/ir/ir_model.py:287
 #, python-format
 msgid "Custom fields must have a name that starts with 'x_' !"
-msgstr ""
+msgstr "કસ્ટમ ફિલ્ડ નુ નામ 'x_' થી જ શરુ થવુ જોઇયે!"
 
 #. module: base
 #: help:ir.actions.server,action_id:0
@@ -528,7 +548,7 @@ msgstr ""
 #: view:res.config:0
 #: view:res.config.installer:0
 msgid "description"
-msgstr ""
+msgstr "વર્ણન"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_base_action_rule
